checker for the es

--- a/slrm_scripts/pipeline_config.yaml
+++ b/slrm_scripts/pipeline_config.yaml
@@ -1,5 +1,6 @@
 input:
   fasta_dir: /n/home06/tbush/gfp_function_prediction/data/trial_10
+  # fasta_dir: /n/home06/tbush/gfp_function_prediction/data/20250815_102358_subsample/subsample
 
 # Output parent directory where all results will be stored
 output:
@@ -7,7 +8,7 @@ output:
 
 # MSA (Multiple Sequence Alignment) generation settings
 msa:
-  num_chunks: 10                    # Number of chunks for MSA array job
+  num_chunks: 2                    # Number of chunks for MSA array job
   array_max_concurrency: 5       # Maximum concurrent MSA array tasks
 
 # Boltz structure prediction settings
@@ -15,12 +16,12 @@ boltz:
   max_files_per_job: 10            # Maximum number of .yaml files per boltz array job
   array_max_concurrency: 5       # Maximum concurrent boltz array tasks
   delete_msa_after_processing: false  # Delete MSA files after successful boltz processing
-  recycling_steps: 8               # Number of recycling steps for boltz prediction
-  diffusion_samples: 10            # Number of diffusion samples for boltz prediction
+  recycling_steps: 10               # Number of recycling steps for boltz prediction
+  diffusion_samples: 25            # Number of diffusion samples for boltz prediction
 
 # ESM embeddings generation settings
 esm:
-  num_chunks: 10                    # Number of chunks for ESM array job
+  num_chunks: 2                    # Number of chunks for ESM array job
   array_max_concurrency: 10       # Maximum concurrent ESM array tasks
 
 # ES (Evolutionary Scale) analysis settings
