update boltz multiples

--- a/slrm_scripts/pipeline_config.yaml
+++ b/slrm_scripts/pipeline_config.yaml
@@ -1,5 +1,5 @@
 input:
-  fasta_dir: /n/home06/tbush/gfp_function_prediction/data/20260106_141959/training_data
+  fasta_dir: /n/home06/tbush/gabrb3
   # fasta_dir: /n/home06/tbush/gfp_function_prediction/data/20250815_102358_subsample/subsample
 
 # Output parent directory where all results will be stored
@@ -26,6 +26,6 @@ esm:
 
 # ES (Evolutionary Scale) analysis settings
 es:
-  script_dir: //n/home06/tbush/es-analysis-src # Directory containing main.py
+  script_dir: //n/home06/tbush/PDAnalysis# Directory containing main.py
   wt_path: /n/home06/tbush/test_input.fasta_prot_pipeline_model_0.cif
 
